--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ font-family: 'Josefin Sans', sans-serif !important; font-size:12px;
 .top-bar-rgt li a {color: #1d1d1d;}
 
  /*----------HEADERB BG -----------*/
-.topheader {min-height: 95px; background:url(https://primesellability.com/c4u/images/headerbg.gif) 0 0 repeat-x #f8f8f8; background:#fff;}
+.topheader {min-height: 95px; background:url(https://raw.githubusercontent.com/Avonside/c4u/main/images/headerbg.gif) 0 0 repeat-x #f8f8f8; background:#fff;}
 
  /*----------NAV BG BG -----------*/
 
@@ -59,12 +59,12 @@ font-family: 'Josefin Sans', sans-serif !important; font-size:12px;
  
  /*----------RIGHT CONTENT-----------*/
  .btn1, .btn2 {display:block; text-align: center; color: white; font-size:14px; padding: 9px 0px; margin: 10px 0px;}
-.btn1 {background:url("https://primesellability.com/c4u/images/heart.png") center right no-repeat #00bcb4; padding-right:34px; color:#fff}
+.btn1 {background:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/heart.png") center right no-repeat #00bcb4; padding-right:34px; color:#fff}
 .btn2 {color:#53565a; border:1px solid #c2c2c2; background:#fff;}
 .btn1:hover, .btn2:hover {color: #000}
  .collect span {font-size: 16px !important; font-weight:600; color: #9e0b59;}
  .collect img {padding-top: 5px;}
- .prod-btm{background:url("https://primesellability.com/c4u/images/medal.png") 98% center no-repeat #9e0b59; margin: 0 -15px; padding: 10px 15px 14px; color: #fff;}
+ .prod-btm{background:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/medal.png") 98% center no-repeat #9e0b59; margin: 0 -15px; padding: 10px 15px 14px; color: #fff;}
  .ratings a {color:#000; padding-left: 5px;}
 	 
  
@@ -144,7 +144,7 @@ margin-top: 10px;}
 .btm-menu img{float:left; margin-right:10px; max-height: 35px; width: auto;}
 .menu nav.navbar.navbar {margin: 0;}
 .btm { padding: 10px 0; font-weight: 600; line-height: 2.6em;}
-/*.banner {background:url("https://primesellability.com/c4u/images/banner.jpg") center no-repeat #727272; background-size:cover; min-height:212px; margin-top:6px;}*/
+/*.banner {background:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/banner.jpg") center no-repeat #727272; background-size:cover; min-height:212px; margin-top:6px;}*/
 .inner{border: 1px solid #c96e8f;}
 .desc-rgt .inner h5{background: #727272; padding: 12px; margin: 0;color: #fff;}
 .wtsnw {margin-bottom: 15px; margin-top:35px; text-align:center; font-weight: 700;}
@@ -167,7 +167,7 @@ footer .signup {border-left: 1px solid #b54581; padding-left:5%}
 .title img {margin-top:10px; max-height: 80px; width: auto;}
 .ratings {margin-bottom: 1px; padding:9px 10px 8px 0; font-size:11px; color:#53565a;}
 .ratings span {margin-right: 10px; }
-.ratings i {display:inline; background:url("https://primesellability.com/c4u/images/star.gif") center no-repeat; padding: 7px;}
+.ratings i {display:inline; background:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/star.gif") center no-repeat; padding: 7px;}
 .price{margin-bottom: 40px;}
 .price h3 {margin-top: 35px; margin-bottom: 0;}
 .price p {font-size:11px;}
@@ -183,7 +183,7 @@ footer .signup {border-left: 1px solid #b54581; padding-left:5%}
 .dlvry .l {width: 70%; float: left; padding-left: 15px;}
 .dlvry .l h4{margin: 10px 0 0;font-size: 16px;}
 .dlvry .r {padding: 8px;}
-.shp {border: 1px solid #e5e5e5;padding: 10px 10px 10px 50px; background:url("https://primesellability.com/c4u/images/plug.gif") 10px center no-repeat;}
+.shp {border: 1px solid #e5e5e5;padding: 10px 10px 10px 50px; background:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/plug.gif") 10px center no-repeat;}
 main {min-width: 310px; margin:auto; background: #fff; position:relative;}
 section { display: none; padding: 20px 0 0; color:#43383c; font-size:16px; line-height:20px;}
 main input { display: none;}
@@ -239,7 +239,7 @@ max-width: 100%;
 .prod-btm ul {display: inline-flex;margin: 0 auto;padding: 0;}
 .prod-btm ul li {list-style: none; padding: 5px 2px;}
 
-.prod-btm ul li { list-style-image:url("https://primesellability.com/c4u/images/tick.png"); margin-left:25px; padding-left:0px;}
+.prod-btm ul li { list-style-image:url("https://raw.githubusercontent.com/Avonside/c4u/main/images/tick.png"); margin-left:25px; padding-left:0px;}
 .prod-btm h3 {margin: 0px 10px 0px 0; float:left; width:90%; font-weight: 700;}
 .prod-desc {margin-top: 50px;}
 .prod {margin-top: 10px;}
