--- a/css/style.css
+++ b/css/style.css
@@ -95,7 +95,7 @@ footer li {line-height:25px; font-size:12px;}
 	.spech {font-size: 24px; color: #d8668f; font-weight: 700; margin: 0px;}
 	
 	
-	.date-bg { background: #fdf8f9; margin-bottom: 10px;}
+	.date-bg { background: #fceef6; margin-bottom: 10px;}
 	.date-bg img {width: 100%;
 height: auto;}
 
